Prevent horizontal overflow on html and body

--- a/style.css
+++ b/style.css
@@ -202,4 +202,7 @@ body {
         display: flex;
     }
 }
+html, body {
+    overflow-x: hidden;
+}
 
